samsung internet browser flex gap fixed

--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -5,9 +5,12 @@
     background-color: helpers.setColor(bg);
     display: flex;
     flex-direction: column;
-    gap: 1rem;
     opacity: 0;
     animation: fade-in 400ms ease-out forwards;
+    // gap: 1rem;
+    &>*{
+        margin-bottom: 1rem !important;
+    }
 
     .about-col{
         padding: 0 0.50rem;
@@ -15,16 +18,26 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        gap: 1rem; //TODO: support Samsung internet
+        &>*{
+            margin-bottom: 1rem !important;
+        }
 
         h2{
             text-align: center;
             color: helpers.setColor(secondary);
         }
+        
+        @include helpers.media(helpers.$tablet){
+            flex-basis: 45%;
+        }
 
-    @include helpers.media(helpers.$tablet){
-        flex-basis: 45%;    
-    }
+        @include helpers.media(helpers.$desktop){
+            gap: 1rem;
+            &>*{
+                margin-bottom: 0 !important;
+            }
+        }
+
     }
 
     .profile{
@@ -56,7 +69,7 @@
 
     .skills{
         opacity: 0;
-        animation: fade-in 400ms 600ms ease-out forwards;
+        animation: fade-in 600ms 800ms ease-out forwards;
 
         .skill-bar{
             display: flex;
@@ -101,8 +114,18 @@
         }
         
         @include helpers.media(helpers.$tablet){
+            &>*{
+                margin-bottom: 1.3rem !important;
+            }
+
             h2{
                 margin-bottom: 1.5rem;
+            }
+        }
+
+        @include helpers.media(helpers.$desktop){
+            &>*{
+                margin-bottom: 0 !important;
             }
             gap: 1.3rem;
         }
@@ -112,6 +135,10 @@
         flex-flow: row wrap;
         align-items: flex-start;
         justify-content: center;
+        gap: 1rem;
+        &>*{
+            margin-bottom: 0 !important;
+        }
 
         .section-title{
             flex-basis: 100%;
