--- a/src/styles/components/_contact.scss
+++ b/src/styles/components/_contact.scss
@@ -10,22 +10,20 @@
         display: flex;
         flex-direction: column;
         padding: 2rem 0.50rem 0 0.50rem;
-        gap: 1.3rem;
         text-align: center;
         opacity: 0;
         animation: fade-in 400ms 400ms ease-out forwards;
-
+        &>*{
+            margin-bottom: 1.3rem !important;
+        }
+        
         h3{
             font-size: 1.5rem;
             color: helpers.setColor(secondary);
             margin: 0 auto;
-            opacity: 0;
-            
-            // @supports not (gap: 1.3rem){
-            //     margin-bottom: 1.3rem !important;
-            // }
+            opacity: 0;            
         }
-
+        
         form{
             flex-basis: 100%;
             display: grid;
